static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Rubik&display=swap');


.no-gutters{
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
}

.brand{
    border: 2px solid rgb(57, 57, 57);
    border-radius: 5px;
}

.bg-light {
    background-color: #3a3a3a !important;
  }

.user-image{
    width: 35px;
    height: 35px;
    border: 2px solid darkcyan;
    border-radius: 50px;
}

.user-logedout{
    width: 35px;
    height: 35px;
    border: 2px solid red;
    border-radius: 50px;
}

.header{
    text-align: center;
    display: block ruby;
    width: 100%;
}

.header ul{
    display: block;
}

.header form{
    display: flex;
}

.header input{
    width: 75%;
}

.header2{
    width: 100%;
}

#navbarSupportedContent {
    display: block !important;
  }

.nav-link{
    color: white;
}


.index-headline{
    margin: 20px auto;
}

.button{
    background-color: unset;
    color: darkcyan;
    border-color: darkcyan;
    margin: 2px;
}

.private-button{
    color: white;
    margin-bottom: 5px;
    margin-left: -13px;
}

.delete-post{
    margin-top: -60px;
    float: right;
}

.btn-outline-success{
    color: darkcyan;
    border-color: darkcyan;
}

.navbar-light .navbar-toggler{
    background-color: darkcyan;
}

/* Main Content */
.container{
    text-align: center;
}

.index-center{
    margin: 0 50px;
}

.channel-assignment{
    color: #3a3a3a;
    display: flex;
}

.main-content{
    width: 100%;
    background-color: darkcyan;
    border-radius: 10px;
    margin: 20px auto;
    padding: 10px;
    text-align: center;
}

.main-content a{
    text-decoration: none;
    color: cyan;
}

.channel-content a{
    text-decoration: none;
    color: cyan;
}

.main-content-headline{
    background-color: rgb(57, 57, 57);
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    margin: -10px -10px 10px;
    padding: 10px;
    border: 1px solid darkcyan;
}

.main-content-headline p{
    margin-bottom: 0px;
}

.channel-headline{
    background-color: rgb(57, 57, 57);
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    margin: -10px -5px 10px;
    padding: 10px;
    border: 1px solid darkcyan; 
}

.main-channel-content{
    background-color: darkcyan;
    border-radius: 10px;
    margin: 20px auto;
    padding: 5px;
    text-align: center;
}

.channel-content{
    background-color: rgb(57, 57, 57);
    border-radius: 10px;
    padding: 10px;
    border: 1px solid darkcyan;
    margin: 10px auto;
    width: unset;
}

.channel-scroll{
    height: 400px;
/* overflow-y: scroll; */
    overflow-y: auto;
}

.channel-scroll-topics{
    height: 100px;
    overflow-y: auto;
}

.post-image{
    width: 150px;
    height: 100px;
    border: 1px solid darkcyan;
    border-radius: 5px;
}



.comment-field{
    width: 90%;
    background-color: dimgray;
    border: 1px solid darkcyan;
    border-radius: 10px;
    color: white;
}

/* User-settings */

#id_body{
    height: 50px;
    width: -moz-available;
}

#id_image {
    width: -moz-available;
    font-size: 70%;
}

#id_biography {
    height: 35px;
    border-radius: 5px;
}

/* Acout dropdown */
.dropdown-menu.show {
    background-color: darkslategray;
    color: white !important;
    padding: 5px;
  }

/* Footer */
footer{
    position: fixed;
    bottom: 0;
    width: 100%;
    text-align: center;
}


/* ---------Messages------------ */
 .message {
	border-radius: 10px;
	box-shadow: 3px 3px 4px 0px rgba(50, 50, 50, 0.75);
	color: white;
	margin-bottom: 20px;
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 5px;
	padding-top: 5px;
	text-align: center;
	width: 80%;
}


 */.message.success {
	background-color: green;
}

.message.error {
	background-color: red;
}


/* Media Queries */
@media (max-width: 992px) {
    .index-headline {
        font-size: inherit;
      }
}

@media (max-width: 768px) {
    .no_small_screens {
      display: none;
    }

    .small_screens {
        margin: 0 10px;
        width: 66%;
    }

    .header {
        text-align: center;
        display: contents;
        width: 33%;
        margin: 0 auto;
    }

    .header input {
        width: 75%;
        height: min-content;
        margin: 0 auto;
      }

    .header-small{
        margin: 0 50px;
    }

    .btn {
        margin: 0px auto !important;
    }
}

@media (max-width: 567px) {
.smaller_screens {
    display: none;
    }

.small_screens {
    margin: 0 auto;
    width: 80%;
    }
}

